update envconfig for project
